traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:26: error: '<-' expected but ')' found.
  for(i<1 to 7) {
              ^Snake:46: error: illegal start of simple expression
}}
 ^